--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "google-dictionary-api": "^1.0.8",
     "html-react-parser": "^1.2.1",
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-speech": "^1.0.2",
     "redux": "^4.0.0-rc.1",
     "sass-loader": "^8.0.2",
     "web-vitals": "^0.2.4"
