--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "google-dictionary-api": "^1.0.8",
     "html-react-parser": "^1.2.1",
+    "moment": "^2.29.1",
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
